Added the comparison run option and example config